@startuml

title __FRAGMENT's Class Diagram__\n

  namespace zuke.com.qxapp {
    namespace Fragment {
      abstract class zuke.com.qxapp.Fragment.BaseFragment {
          + context : Context
          + layoutInflater : LayoutInflater
          + resources : Resources
          - RootView : View
          + onActivityCreated()
          + onAttach()
          + onCreate()
          + onCreateView()
          + onDestroyView()
          + onPause()
          + onResume()
          + onViewCreated()
          {abstract} # bindEvent()
          # findView()
          # findView()
          {abstract} # getLayoutId()
          {abstract} # initData()
          {abstract} # initView()
      }
    }
  }
  

  namespace zuke.com.qxapp {
    namespace Fragment {
      class zuke.com.qxapp.Fragment.FragmentChat {
          ~ data : List<Community>
          - addBtn : FloatingActionButton
          - addComunity : FloatingActionButton
          - addContent : FloatingActionButton
          - pop_view : View
          - popupWindow : PopupWindow
          - rlLayout : RelativeLayout
          - rv : RecyclerView
          - srlayout : SwipeRefreshLayout
          + onActivityCreated()
          + onCreateView()
          + onResume()
          - Refresh()
          - initView()
      }
    }
  }
  

  namespace zuke.com.qxapp {
    namespace Fragment {
      class zuke.com.qxapp.Fragment.FragmentHome {
          ~ data : List<Post>
          - helloHome : TextView
          - rv : RecyclerView
          - search : ImageView
          - srlayout : SwipeRefreshLayout
          - title : TextView
          - username : TextView
          - welcome : TextView
          + onActivityCreated()
          + onCreateView()
          - Refresh()
          - initView()
      }
    }
  }
  

  namespace zuke.com.qxapp {
    namespace Fragment {
      class zuke.com.qxapp.Fragment.FragmentMine {
          - fansnum : TextView
          - focusactivity : LinearLayout
          - followactivity : LinearLayout
          - mine_gender : ImageView
          - mycollect : LinearLayout
          - mycomunity : LinearLayout
          - myfocusnum : TextView
          - myinfo : LinearLayout
          - mypush : LinearLayout
          - setting : LinearLayout
          - username : TextView
          + onActivityCreated()
          + onCreateView()
          + onResume()
          - getMyfocusnum()
          - getMyinfo()
          - initView()
          - setnumfont()
      }
    }
  }
  

  namespace zuke.com.qxapp {
    namespace Fragment {
      class zuke.com.qxapp.Fragment.Fragment_Community {
          - data : List<Community>
          - error_community : TextView
          - recyclerCommunity : RecyclerView
          - swipeCommunity : SwipeRefreshLayout
          + onActivityCreated()
          + onCreateView()
          - Refresh()
          - initView()
      }
    }
  }
  

  namespace zuke.com.qxapp {
    namespace Fragment {
      class zuke.com.qxapp.Fragment.Fragment_Push {
          - data : List<Post>
          - error_push : TextView
          - recyclerView : RecyclerView
          - swipeRefreshLayout : SwipeRefreshLayout
          + onActivityCreated()
          + onCreateView()
          - Refresh()
          - initView()
      }
    }
  }
  

  zuke.com.qxapp.Fragment.BaseFragment -up-|> androidx.fragment.app.Fragment
  zuke.com.qxapp.Fragment.FragmentChat -up-|> androidx.fragment.app.Fragment
  zuke.com.qxapp.Fragment.FragmentChat o-- zuke.com.qxapp.Adapter.ChatAdapter : chatAdapter
  zuke.com.qxapp.Fragment.FragmentHome -up-|> androidx.fragment.app.Fragment
  zuke.com.qxapp.Fragment.FragmentHome o-- zuke.com.qxapp.Adapter.HomeAdapter : homeAdapter
  zuke.com.qxapp.Fragment.FragmentMine -up-|> androidx.fragment.app.Fragment
  zuke.com.qxapp.Fragment.Fragment_Community -up-|> androidx.fragment.app.Fragment
  zuke.com.qxapp.Fragment.Fragment_Community o-- zuke.com.qxapp.Adapter.MyCollectionCommunityAdapter : myCollectionCommunityAdapter
  zuke.com.qxapp.Fragment.Fragment_Push -up-|> androidx.fragment.app.Fragment
  zuke.com.qxapp.Fragment.Fragment_Push o-- zuke.com.qxapp.Adapter.MyCollectionPushAdapter : myCollectionPushAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
